[fix]: Dark Mode.
Dark Mode changes overridden with merge conflicts, fixed again.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -191,7 +191,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-tint: var(--ion-color-ionBack-tint);
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
